--- a/fp2019/hw.html
+++ b/fp2019/hw.html
@@ -36,7 +36,7 @@
 <li><a href="#_python_мирзазянов">Python (Мирзазянов)</a></li>
 <li><a href="#_ruby_привалихин">Ruby (Привалихин)</a></li>
 <li><a href="#_javascript_рагимов">Javascript (Рагимов)</a></li>
-<li><a href="#_kotlin_влаев">Kotlin (Влаев)</a></li>
+<li><a href="#_kotlin_влаев_ещё_кто_то">Kotlin (Влаев + ещё кто-то)</a></li>
 <li><a href="#_awk_афонина">AWK (Афонина)</a></li>
 <li><a href="#_haskell_1_2_человека">Haskell (1-2 человека)</a></li>
 <li><a href="#_lisp">LISP</a></li>
@@ -364,9 +364,67 @@ echo $BASH_COMMAND</pre>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_kotlin_влаев">Kotlin (Влаев)</h3>
+<h3 id="_kotlin_влаев_ещё_кто_то">Kotlin (Влаев + ещё кто-то)</h3>
 <div class="paragraph">
-<p>Тут из языково-специфичных фич обязательно должна быть какая-то поддержка ООП и вызова методов (ну вы его сдавали, думаю вопросов пока нет).</p>
+<p>AST делаете вместе, из языково-специфичных фич обязательно должны быть:</p>
+</div>
+<div class="olist arabic">
+<ol class="arabic">
+<li>
+<p>Числа, строки, стнадартные операции над ними, массивы.</p>
+</li>
+<li>
+<p>Объявления классов и методов, статические тоже нужно, чтобы можно быть <code>main()</code> написать.</p>
+</li>
+<li>
+<p>Навороченного наследования не требую, наследования классов и интерфейсов не нужно. Пусть только будет в языке один захардкоженный тип <code>Object</code>, который надтип всего чего угодно.</p>
+</li>
+<li>
+<p>Разумеется <code>null</code>. Также давайте RuntimeExceptions&#8201;&#8212;&#8201;которые громко падают, их поймать невозможно (т.е. <code>try</code> &amp;<code>catch</code> добавлять не нужно) и аннотировать методы бросаемыми исключениями тоже не нужно.</p>
+</li>
+</ol>
+</div>
+<div class="paragraph">
+<p>Парсер должен легко параллелиться между людьми.</p>
+</div>
+<div class="olist arabic">
+<ol class="arabic">
+<li>
+<p>Парсер в нормальном смысле этого слова</p>
+</li>
+<li>
+<p>Вложенные коменнтарии: конструкция <code>*/</code> должна заканчивать <strong>последний</strong> открытый комментарий, а не все сразу.</p>
+</li>
+<li>
+<p>В некоторых случаях в языке разумно иметь 2-мерный синтаксис, наверное для конструкции switch. Поддержите её и 2-мерный синтаксис там.</p>
+</li>
+<li>
+<p>Хочу, чтобы код мжно было писать, используя препроцессор (<code>#define</code> и прочее)</p>
+</li>
+</ol>
+</div>
+<div class="paragraph">
+<p>Интерпретатор</p>
+</div>
+<div class="olist arabic">
+<ol class="arabic">
+<li>
+<p>Один пишет интерпретатор</p>
+</li>
+<li>
+<p>Второй генерирует настоящий JVM bytecode и его исполняет</p>
+</li>
+</ol>
+</div>
+<div class="paragraph">
+<p>Преобразования программ</p>
+</div>
+<div class="olist arabic">
+<ol class="arabic">
+<li>
+<p>напишу потом.</p>
+</li>
+</ol>
 </div>
 </div>
 <div class="sect2">
@@ -553,7 +611,7 @@ MOV  EAX ← [y]       |         MOV  EBX ← [x]</pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-10-01 13:13:32 MSK
+Last updated 2019-10-04 13:54:11 MSK
 </div>
 </div>
 </body>
