--- a/fp2019/hw.html
+++ b/fp2019/hw.html
@@ -30,6 +30,7 @@
 </li>
 <li><a href="#hw1234">Домашки 1-4</a>
 <ul class="sectlevel2">
+<li><a href="#lua">Lua (Цириков)</a></li>
 <li><a href="#sql">SQL (Погожельская)</a></li>
 <li><a href="#_bourne_again_shell_абзалов">Bourne Again SHell (Абзалов)</a></li>
 <li><a href="#python">Python (Мирзазянов)</a></li>
@@ -162,13 +163,12 @@ Haskell), то это нужно предварительно согласова
 <div class="paragraph">
 <p>Проверяться будет как программа работает, а также будут вопросы по коду программы (потому что все задачи гуглятся).</p>
 </div>
-<div class="paragraph">
-<p>[[lua]
-=== Lua (Цириков)</p>
-</div>
+<div class="sect2">
+<h3 id="lua">Lua (Цириков)</h3>
 <div class="paragraph">
 <p>Интересный минималистичный язык, где в качестве универсальной структуры данных используется помесь
 массива с хэш-таблицей, а для оптимизации вместо целых чисел используеются Double&#8217;ы.</p>
+</div>
 </div>
 <div class="sect2">
 <h3 id="sql">SQL (Погожельская)</h3>
@@ -619,7 +619,7 @@ MOV  EAX ← [y]       |         MOV  EBX ← [x]</pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-10-04 13:58:55 MSK
+Last updated 2019-10-04 14:01:16 MSK
 </div>
 </div>
 </body>
