--- a/fp2019/projects.html
+++ b/fp2019/projects.html
@@ -25,11 +25,11 @@
 <ul class="sectlevel2">
 <li><a href="#_прошлогодние">Прошлогодние</a></li>
 <li><a href="#incremental">Демка инкрементальных вычислений с матрицами</a></li>
-<li><a href="#caml_lua">Компиляция программ на  OCaml в lua</a></li>
+<li><a href="#caml_lua">Компиляция программ на OCaml в lua (занята)</a></li>
 <li><a href="#altergo">Alt-Ergo (гроб)</a></li>
 <li><a href="#merlin">merlin</a></li>
-<li><a href="#active">Active Patterns в OCaml (вроде как занята)</a></li>
-<li><a href="#graphparsing">Про парсинг графов с помощью грамматик на Haskell</a></li>
+<li><a href="#active">Active Patterns в OCaml (занята)</a></li>
+<li><a href="#graphparsing">Про парсинг графов с помощью грамматик на Haskell (занята)</a></li>
 </ul>
 </li>
 </ul>
@@ -75,7 +75,7 @@
 </div>
 </div>
 <div class="sect2">
-<h3 id="caml_lua">Компиляция программ на  OCaml в lua</h3>
+<h3 id="caml_lua">Компиляция программ на OCaml в lua (занята)</h3>
 <div class="paragraph">
 <p>На данный момент при embedded разработке программист строго ограничивается возможностями железа (скоростью
 процессора и объемом памяти) и спецификой требований к софту: очень часто приветствуется бинарные
@@ -199,7 +199,7 @@ Lambda байткод) по аналогии с проектом js_of_ocaml.
 </div>
 </div>
 <div class="sect2">
-<h3 id="active">Active Patterns в OCaml (вроде как занята)</h3>
+<h3 id="active">Active Patterns в OCaml (занята)</h3>
 <div class="paragraph">
 <p>В Haskell они есть (называются Pattern Synonyms), в F#&#8201;&#8212;&#8201;тоже, а в OCaml непорядок.</p>
 </div>
@@ -231,7 +231,7 @@ Lambda байткод) по аналогии с проектом js_of_ocaml.
 </div>
 </div>
 <div class="sect2">
-<h3 id="graphparsing">Про парсинг графов с помощью грамматик на Haskell</h3>
+<h3 id="graphparsing">Про парсинг графов с помощью грамматик на Haskell (занята)</h3>
 <div class="paragraph">
 <p>Есть статья <code>Efficient Parallel and Incremental Parsing of Practical Context-Free Languages</code> от JEAN-PHILIPPE BERNARDY &amp; KOEN CLAESSEN (pdfку могу выслать), где авторы пишут, что смогли распараллелить синтаксический анализ для некоторых "хороших" грамматик и получить прирост скорости. У доступна <a href="https://github.com/BNFC/bnfc/blob/master/source/runtime/Data/Matrix/Quad.hs">реализация</a> на Haskell.</p>
 </div>
@@ -252,7 +252,7 @@ Lambda байткод) по аналогии с проектом js_of_ocaml.
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-09-17 15:01:09 MSK
+Last updated 2019-10-04 14:02:56 MSK
 </div>
 </div>
 </body>
