--- a/fp2019/hw.html
+++ b/fp2019/hw.html
@@ -36,7 +36,7 @@
 <li><a href="#python">Python (Мирзазянов)</a></li>
 <li><a href="#ruby">Ruby (Привалихин)</a></li>
 <li><a href="#javascript">Javascript (Рагимов)</a></li>
-<li><a href="#kotlin">Kotlin (Влаев + ещё кто-то)</a></li>
+<li><a href="#kotlin">Kotlin (Влаев + Кузиванов)</a></li>
 <li><a href="#awk">AWK (Афонина)</a></li>
 <li><a href="#haskell">Haskell (1-2 человека)</a></li>
 <li><a href="#lisp">LISP</a></li>
@@ -364,7 +364,7 @@ echo $BASH_COMMAND</pre>
 </div>
 </div>
 <div class="sect2">
-<h3 id="kotlin">Kotlin (Влаев + ещё кто-то)</h3>
+<h3 id="kotlin">Kotlin (Влаев + Кузиванов)</h3>
 <div class="paragraph">
 <p> <details><summary> 
 <span class="underline"><strong>Подробнее (спойлер)</strong></span>
@@ -619,7 +619,7 @@ MOV  EAX ← [y]       |         MOV  EBX ← [x]</pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-10-04 14:01:16 MSK
+Last updated 2019-10-04 14:42:57 MSK
 </div>
 </div>
 </body>
