FP2019: desc of hw about C langauge

--- a/fp2019/hw.html
+++ b/fp2019/hw.html
@@ -21,13 +21,6 @@
 <div id="toc" class="toc">
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
-<li><a href="#_задачки_для_скалолазов">Задачки для Скалолазов</a>
-<ul class="sectlevel2">
-<li><a href="#_алгоритм_dpll">Алгоритм DPLL</a></li>
-<li><a href="#_окологеймерская">Окологеймерская</a></li>
-<li><a href="#_задача_про_верификацию_и_триплеты_хоара">Задача про верификацию и триплеты Хоара</a></li>
-</ul>
-</li>
 <li><a href="#hw1234">Домашки 1-4</a>
 <ul class="sectlevel2">
 <li><a href="#lua">Lua (Цириков)</a></li>
@@ -43,7 +36,7 @@
 <li><a href="#_scala_1_2_человека">Scala (1-2 человека)</a></li>
 <li><a href="#_ocaml_with_objects_2_человека">OCaml with objects (2 человека)</a></li>
 <li><a href="#_ocaml_haskell_with_gadt_2_человека">OCaml/Haskell with GADT (2 человека)</a></li>
-<li><a href="#C">Cи</a></li>
+<li><a href="#C">Cи (Шапошников)</a></li>
 <li><a href="#asm">Assembler</a></li>
 <li><a href="#datalog">Datalog</a></li>
 <li><a href="#nfa">NFA (Дулетов)</a></li>
@@ -65,53 +58,6 @@
 <div class="sectionbody">
 <div class="paragraph">
 <p>Переход на <a href="index.html">главную страницу курса</a></p>
-</div>
-</div>
-</div>
-<div class="sect1">
-<h2 id="_задачки_для_скалолазов">Задачки для Скалолазов</h2>
-<div class="sectionbody">
-<div class="paragraph">
-<p>Дополнительные, так как у них слишком короткий курс на Степике. Если надо будет ещё задачек&#8201;&#8212;&#8201;напишите.</p>
-</div>
-<div class="sect2">
-<h3 id="_алгоритм_dpll">Алгоритм DPLL</h3>
-<div class="paragraph">
-<p>Задача из мира математической логики про выполнимость формулы языка высказываний. В том году давал на экзамен. Сейчас хочу сам алгоритм с какими-нибудь оптимизациями (например, hash consing).</p>
-</div>
-<div class="paragraph">
-<p>Сам алгоритм должен довольно легко гуглиться.</p>
-</div>
-</div>
-<div class="sect2">
-<h3 id="_окологеймерская">Окологеймерская</h3>
-<div class="paragraph">
-<p>Запустить моделирование мира, где персонажи что-то делают и куда-то стремятся.</p>
-</div>
-<div class="admonitionblock note">
-<table>
-<tr>
-<td class="icon">
-<img src="./images/icons/note.png" alt="Note">
-</td>
-<td class="content">
-Детали обсуждаемы потом
-</td>
-</tr>
-</table>
-</div>
-</div>
-<div class="sect2">
-<h3 id="_задача_про_верификацию_и_триплеты_хоара">Задача про верификацию и триплеты Хоара</h3>
-<div class="paragraph">
-<p>Фиксировано AST языка программирования с числами, условиями, присваиваниями и циклами. Программы аннотированы триплетами Хоара. Проверить, что аннотированы корректно.</p>
-</div>
-<div class="paragraph">
-<p>Про триплеты Хоара по-русски можно читать, например, в книжке Герасимова "Математическая логика".</p>
-</div>
-<div class="paragraph">
-<p>Выбравшему эту задачу можно упростить себе жизнь, выбрав правильный вариант домашки.</p>
-</div>
 </div>
 </div>
 </div>
@@ -161,7 +107,8 @@ Haskell), то это нужно предварительно согласова
 <p>Если кто-то хочет подусложнить задачу и решать одну и ту же на одном и том же языке <em>вдвоем</em>, то можно также обсудить.</p>
 </div>
 <div class="paragraph">
-<p>Проверяться будет как программа работает, а также будут вопросы по коду программы (потому что все задачи гуглятся).</p>
+<p>Проверяться будет как программа работает, а также будут вопросы по коду программы (потому что все задачи гуглятся).
+Засылать готовые решения надо с помощью merge request в <a href="https://gitlab.com/Kakadu/haskell-course2019-hw">этот репозиторий</a>.</p>
 </div>
 <div class="sect2">
 <h3 id="lua">Lua (Цириков)</h3>
@@ -493,10 +440,30 @@ echo $BASH_COMMAND</pre>
 </div>
 </div>
 <div class="sect2">
-<h3 id="C">Cи</h3>
+<h3 id="C">Cи (Шапошников)</h3>
 <div class="paragraph">
-<p>Интерпретатор языка с поддержкой арфиметики указателей. Наверное будет несложно сделать, есть куча проектов в
-интернетике про реализацию минималистичного компилятора Си в несколько сотен строчек.</p>
+<p>Как обычно, нужно поддержать основные конструкции языка: числа, строки (массивы чисел), ветвления, цикл
+<code>while</code> и по желанию <code>for</code>, объявления и вызов функций.</p>
+</div>
+<div class="paragraph">
+<p>Из Си-специфичного: массивы произвольной длины. Можете черпать вдохновение из минималистичного компилятора.
+Не надо пока делать:</p>
+</div>
+<div class="olist arabic">
+<ol class="arabic">
+<li>
+<p>Объявления структур</p>
+</li>
+<li>
+<p>Числа отличные от <code>int</code> и HEX представление</p>
+</li>
+<li>
+<p>Хитрые методы инициализации структур/массивов.</p>
+</li>
+</ol>
+</div>
+<div class="paragraph">
+<p>Скорее всего будет подзадача про трансляцию этого мини-языка в x86 ассемблер (для простых функций <code>fibonacci</code> и <code>memcpy</code> это должно быть очень просто). Скорее всего будет полезно пообщаться с человеком, который решает задачу про assembler.</p>
 </div>
 </div>
 <div class="sect2">
@@ -621,7 +588,7 @@ MOV  EAX ← [y]       |         MOV  EBX ← [x]</pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-10-04 17:36:28 MSK
+Last updated 2019-10-11 13:02:54 MSK
 </div>
 </div>
 </body>
