FP2019: desc of hw about C langauge

--- a/fp2019/hw.html
+++ b/fp2019/hw.html
@@ -446,7 +446,7 @@ echo $BASH_COMMAND</pre>
 <code>while</code> и по желанию <code>for</code>, объявления и вызов функций.</p>
 </div>
 <div class="paragraph">
-<p>Из Си-специфичного: массивы произвольной длины. Можете черпать вдохновение из минималистичного компилятора.
+<p>Из Си-специфичного: массивы произвольной длины. Можете черпать вдохновение из <a href="https://bellard.org/tcc/">минималистичного компилятора</a>.
 Не надо пока делать:</p>
 </div>
 <div class="olist arabic">
@@ -588,7 +588,7 @@ MOV  EAX ← [y]       |         MOV  EBX ← [x]</pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-10-11 13:02:54 MSK
+Last updated 2019-10-11 13:10:00 MSK
 </div>
 </div>
 </body>
