FP2019: desc of hw about Datalog langauge

--- a/fp2019/hw.html
+++ b/fp2019/hw.html
@@ -478,8 +478,36 @@ echo $BASH_COMMAND</pre>
 <div class="sect2">
 <h3 id="datalog">Datalog</h3>
 <div class="paragraph">
-<p>Простейший представитель логического программирования. Спека должна быть легко находима
-в интернетах</p>
+<p>Простейший представитель логического программирования, подмножество Prolog. Итого там должны быть</p>
+</div>
+<div class="olist arabic">
+<ol class="arabic">
+<li>
+<p>Предикаты</p>
+</li>
+<li>
+<p><strong>Произвольные</strong> функциональные символы запрещены, хотя разрешается иметь захардкоженное количество функциаональных символов в программе</p>
+</li>
+<li>
+<p>Переменные</p>
+</li>
+<li>
+<p>Правила вывода новых фактов (a.k.a. Хорн клозы (Horn clauses))</p>
+</li>
+<li>
+<p>Способ задания базы данных известных фактов (a.k.a. аксимом)</p>
+</li>
+</ol>
+</div>
+<div class="paragraph">
+<p>Итого, программа состоит из "базы данных" фактов и запроса,  а интерпретатор
+проверяет согласованность запроса с базой данных и говорит "да" или "нет". Из-за наложенных ограничений
+процесс поиска всегда завершится.</p>
+</div>
+<div class="paragraph">
+<p>Простейшей программой будет проверка чисел в стиле Пеано на четность/нечетность
+(<a href="https://www.cs.cmu.edu/~fp/courses/15317-f17/lectures/18-datalog.pdf">страницы 2-3</a>).
+Ну или поиск пути в графе (<a href="http://pages.cs.wisc.edu/~paris/cs784-s17/lectures/lecture7.pdf">страницы 1-2</a>).</p>
 </div>
 </div>
 <div class="sect2">
@@ -588,7 +616,7 @@ MOV  EAX ← [y]       |         MOV  EBX ← [x]</pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-10-11 13:10:00 MSK
+Last updated 2019-10-11 13:51:41 MSK
 </div>
 </div>
 </body>
