--- a/fp2019/hw.html
+++ b/fp2019/hw.html
@@ -506,6 +506,10 @@ Scott (или кто там ещё) encoding, чтобы эмулировать 
 <p>Так называемый стековый язык программирования, мало похож на всё остальное. Считается
 языком с легко расширяемым синтаксисом.</p>
 </div>
+<div class="paragraph">
+<p>Думаю, что в качестве задачи 4 можно писать супероптимизатор такой, как
+<a href="http://sovietov.com/app/forthwiz.html">тут</a>. Интерпретатор и парсер можно писать с прицелом на конструкции, используемые в супероптимизаторе</p>
+</div>
 </div>
 <div class="sect2">
 <h3 id="ocaml_oop">OCaml with objects (Гамаонов)</h3>
@@ -643,7 +647,7 @@ MOV  EAX ← [y]       |         MOV  EBX ← [x]</pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-10-11 23:35:21 MSK
+Last updated 2019-10-31 14:04:43 MSK
 </div>
 </div>
 </body>
