--- a/fp2019/index.html
+++ b/fp2019/index.html
@@ -250,6 +250,30 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 </div>
 </div>
 <div class="sect1">
+<h2 id="week7">Неделя 6 (17 октября)</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p><a href="03.pdf">Слайды про лямбда исчисление</a></p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="week8">Неделя 7 (24 октября)</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Продолжение про лямбда исчисление</p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="week9">Неделя 8 (31 октября)</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p><a href="04monads.pdf">Слайды про монады</a></p>
+</div>
+</div>
+</div>
+<div class="sect1">
 <h2 id="questions">Теоретические вопросы к экзамену 2018 (предыдущего) года</h2>
 <div class="sectionbody">
 <div class="paragraph">
@@ -326,7 +350,7 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-10-03 12:26:26 MSK
+Last updated 2019-10-31 14:02:17 MSK
 </div>
 </div>
 </body>
