--- a/fp2019/index.html
+++ b/fp2019/index.html
@@ -274,6 +274,14 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 </div>
 </div>
 <div class="sect1">
+<h2 id="week10">Неделя 9 (07 ноября)</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p><a href="05gadt.pdf">Слайды про GADT</a></p>
+</div>
+</div>
+</div>
+<div class="sect1">
 <h2 id="questions">Теоретические вопросы к экзамену 2018 (предыдущего) года</h2>
 <div class="sectionbody">
 <div class="paragraph">
@@ -350,7 +358,7 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-10-31 14:02:17 MSK
+Last updated 2019-11-07 14:45:31 MSK
 </div>
 </div>
 </body>
