FP2019: more slides

--- a/fp2019/index.html
+++ b/fp2019/index.html
@@ -282,6 +282,14 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 </div>
 </div>
 <div class="sect1">
+<h2 id="week11">Неделя 10 (14 ноября)</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p><a href="06many.pdf">Слайды про разные темы</a></p>
+</div>
+</div>
+</div>
+<div class="sect1">
 <h2 id="questions">Теоретические вопросы к экзамену 2018 (предыдущего) года</h2>
 <div class="sectionbody">
 <div class="paragraph">
@@ -358,7 +366,7 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-11-07 14:45:31 MSK
+Last updated 2019-11-14 02:12:22 MSK
 </div>
 </div>
 </body>
