--- a/fp2019/hw.html
+++ b/fp2019/hw.html
@@ -487,6 +487,23 @@ Scott (или кто там ещё) encoding, чтобы эмулировать 
 (<a href="https://www.cs.cmu.edu/~fp/courses/15317-f17/lectures/18-datalog.pdf">страницы 2-3</a>).
 Ну или поиск пути в графе (<a href="http://pages.cs.wisc.edu/~paris/cs784-s17/lectures/lecture7.pdf">страницы 1-2</a>).</p>
 </div>
+<div class="paragraph">
+<p>В качестве 3й и 4й задач реализуйте процедуры поиска top-down и bottom-up, а также
+приведите примеры программ, на которых одно лучше другого, и наоборот. С обоснованием
+что такое "лучше" и численными замерами-доказательствами "лучшести".</p>
+</div>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<img src="./images/icons/note.png" alt="Note">
+</td>
+<td class="content">
+В 2020 год требовать magic set rewriting.
+</td>
+</tr>
+</table>
+</div>
 </div>
 <div class="sect2">
 <h3 id="nfa">NFA (Дулетов)</h3>
@@ -660,7 +677,7 @@ MOV  EAX ← [y]       |         MOV  EBX ← [x]</pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-11-14 02:13:26 MSK
+Last updated 2019-12-04 17:49:59 MSK
 </div>
 </div>
 </body>
