--- a/fp2019/hw.html
+++ b/fp2019/hw.html
@@ -112,6 +112,19 @@ Haskell), то это нужно предварительно согласова
 <p>Проверяться будет как программа работает, а также будут вопросы по коду программы (потому что все задачи гуглятся).
 Засылать готовые решения надо с помощью merge request в <a href="https://gitlab.com/Kakadu/haskell-course2019-hw">этот репозиторий</a>.</p>
 </div>
+<div class="paragraph">
+<p>Для большинства языков в качетсве задачи №4 можно взять стандартные оптимизации языка:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>dead code elimination&#8201;&#8212;&#8201;выкидываение неиспользуемых переменных и объявлений</p>
+</li>
+<li>
+<p>constant folding&#8201;&#8212;&#8201;протягивание именованных констант внутрь, упрощение выражений <code>1+2</code> или <code>x+3-x</code> в <code>3</code>.</p>
+</li>
+</ul>
+</div>
 <div class="sect2">
 <h3 id="lua">Lua (Цириков)</h3>
 <div class="paragraph">
@@ -499,7 +512,7 @@ Scott (или кто там ещё) encoding, чтобы эмулировать 
 <img src="./images/icons/note.png" alt="Note">
 </td>
 <td class="content">
-В 2020 год требовать magic set rewriting.
+В 2020 году требовать (<a href="http://webdam.inria.fr/Alice/pdfs/Chapter-13.pdf)">magic set rewriting</a>.
 </td>
 </tr>
 </table>
@@ -677,7 +690,7 @@ MOV  EAX ← [y]       |         MOV  EBX ← [x]</pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-12-04 17:49:59 MSK
+Last updated 2019-12-04 18:08:17 MSK
 </div>
 </div>
 </body>
