--- a/fp2019/index.html
+++ b/fp2019/index.html
@@ -244,13 +244,13 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 </div>
 </div>
 <div class="sect1">
-<h2 id="week6">Неделя 5 (10 октября)</h2>
+<h2 id="week6">Неделя 6 (10 октября)</h2>
 <div class="sectionbody">
 
 </div>
 </div>
 <div class="sect1">
-<h2 id="week7">Неделя 6 (17 октября)</h2>
+<h2 id="week7">Неделя 7 (17 октября)</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p><a href="03.pdf">Слайды про лямбда исчисление</a></p>
@@ -258,7 +258,7 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 </div>
 </div>
 <div class="sect1">
-<h2 id="week8">Неделя 7 (24 октября)</h2>
+<h2 id="week8">Неделя 8 (24 октября)</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>Продолжение про лямбда исчисление</p>
@@ -266,7 +266,7 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 </div>
 </div>
 <div class="sect1">
-<h2 id="week9">Неделя 8 (31 октября)</h2>
+<h2 id="week9">Неделя 9 (31 октября)</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p><a href="04monads.pdf">Слайды про монады</a></p>
@@ -274,7 +274,7 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 </div>
 </div>
 <div class="sect1">
-<h2 id="week10">Неделя 9 (07 ноября)</h2>
+<h2 id="week10">Неделя 10 (07 ноября)</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p><a href="05gadt.pdf">Слайды про GADT</a></p>
@@ -282,11 +282,49 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 </div>
 </div>
 <div class="sect1">
-<h2 id="week11">Неделя 10 (14 ноября)</h2>
+<h2 id="week11">Неделя 11 (14 ноября)</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p><a href="06many.pdf">Слайды про разные темы</a></p>
 </div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="week12">Неделя 12 (21 ноября)</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p><a href="07free.pdf">Индексы де Брёйна и free-монада</a></p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="week13">Неделя 13 (28 ноября)</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p><a href="08logic.pdf">ФП vs. Интуиционистская логика</a></p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="week14">Неделя 14 (05 декабря)</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p><a href="mm-transformers-12.2019-noads.pdf">Траснформеры</a></p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="week15">Неделя 15 (12 декабря)</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Последняя по расписанию пара <a href="08hm.pdf">про полиморфные типы</a></p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="week16">Неделя 16 (19 декабря)</h2>
+<div class="sectionbody">
+
 </div>
 </div>
 <div class="sect1">
@@ -366,7 +404,7 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-11-14 02:12:22 MSK
+Last updated 2019-12-13 13:23:30 MSK
 </div>
 </div>
 </body>
