--- a/blogarion/unsorted-papers.html
+++ b/blogarion/unsorted-papers.html
@@ -32,4 +32,6 @@ Oleg is doing <a href='http://okmij.org/ftp/ML/first-class-modules/generics.ml'>
 <p>Ralph Hinze<a href='https://www.cs.ox.ac.uk/ralf.hinze/Kan.pdf'>Kan Extensions for Program Optimisation Or: Art and Dan Explain an Old Trick</a></p>
 <p><a href='http://compilers.cs.uni-saarland.de/papers/lkh15_cgo.pdf'>A  Graph-Based  Higher-Order  Intermediate  Representation</a></p>
 <p><a href='http://perso.ens-lyon.fr/nicolas.brisebarre/Publi/fpdivision.pdf'>Accelerating Correctly Rounded Floating-PointDivision When the Divisor is Known in Advance</a> 2003</p>
+<p><a href='http://www.cs.ox.ac.uk/ralf.hinze/LN.pdf'>Generic Programming with Adjunctions</a> by Ralph Hinze 2012</p>
+<p><a href='http://www.cs.ox.ac.uk/ralf.hinze/publications/index.html'>All publications of Ralph Hinze</a></p>
 </article></body></html>
