--- a/blogarion/unsorted-teaching.html
+++ b/blogarion/unsorted-teaching.html
@@ -33,4 +33,5 @@ with OCaml in mind: sorting, sequence access, queues, sets and maps, hashconsing
 <p><a href='https://www.usenix.org/system/files/nsdi19-wang-xiang.pdf'>Hyperscan: A Fast Multi-pattern Regex Matcher  for Modern CPUs</a></p>
 <p><a href='https://drive.google.com/drive/folders/0B1Rdr1fbS6M9SjlKUk1zMVNjOVU'>Granin&#39;s book</a></p>
 <p>Foundations of Coq <a href='http://www.cse.chalmers.se/~peterd/papers/Inductive_Families.pdf'>Inductive families</a></p>
+<p><a href='http://guillaume.martres.me/publications/dotty-hk.pdf'>Implementing  Higher-Kinded  Types  in  Dotty</a></p>
 </article></body></html>
