FP2019: +1 haskell book

--- a/fp2019/index.html
+++ b/fp2019/index.html
@@ -74,7 +74,7 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 <p>Haskell High Performance Programming (2016)</p>
 </li>
 <li>
-<p>TODO: ещё одна</p>
+<p>Haskell Design Patterns</p>
 </li>
 </ul>
 </div>
@@ -420,7 +420,7 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-12-30 16:18:03 MSK
+Last updated 2019-12-30 19:39:33 MSK
 </div>
 </div>
 </body>
