--- a/fp2019/index.html
+++ b/fp2019/index.html
@@ -360,22 +360,25 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 <p>Классы типов. Мотивация.</p>
 </li>
 <li>
-<p>☦ Алгебра типов. Простейшие типы из которых можно много чего построить. Операции над типами. Получение зипперов по типу.</p>
+<p>☦ Алгебра типов. Простейшие типы из которых можно много чего построить. Операции над типами. Получение зипперов по типу (конкретные типы есть в слайдах).</p>
 </li>
 <li>
 <p>Эквивалентность, равенство и изоморфизм. И для типов тоже. Как из простейших типов построить что-то изоморфное данному алгебраическому типу?</p>
 </li>
 <li>
-<p>Типы данных. Левоориентированные кучи</p>
+<p>Типы данных. Левоориентированные кучи.  Основные свойства инварианты. Сложность операций. Реализация.</p>
 </li>
 <li>
-<p>Типы данных. Биномиальные кучи</p>
+<p>Типы данных. Биномиальные кучи. Внутреннее устройство. Сравнение c левоориентированными.</p>
 </li>
 <li>
-<p>Типы данных. Красно-черные деревья</p>
+<p>Типы данных. Красно-черные деревья. Балансировка для чисто функциональный реализации. (Удаление не надо)</p>
 </li>
 <li>
 <p>☦ Лямбда-исчисление. Подстановки. Редукция. ☦ Capture avoiding substitution.</p>
+<div class="paragraph">
+<p>Также требуется умение демонстрировать на бумажке/доске, что студент может провести редукцию в той или иной стратегии.</p>
+</div>
 </li>
 <li>
 <p>Стратегии вычисления лямбда-термов: applicative order, call-by-name, call-by-value, normal order.
@@ -395,19 +398,55 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 </li>
 <li>
 <p>☦ Монады. ☦ Законы монад. ☦ Выражение функторов и аппликативов, если монада уже описана.
-☦ Стандартные монады: Reader, Writer, ☦ State, ☦ List, ☦ Maybe, Cont, ☦ IO.</p>
+☦ Стандартные монады: Reader, Writer, ☦ State, ☦ List, ☦ Maybe.</p>
+</li>
+<li>
+<p>Понятие чистой функции. Чистые и нечистые функции в Haskell. Монада IO.</p>
+</li>
+<li>
+<p>Continuation monad и  continuation passing style. Пример про <code>callCC</code>.</p>
+<div class="paragraph">
+<p>Также требует от студенто показать умение переписывать код из домашки в continuation passing style.</p>
+</div>
 </li>
 <li>
 <p>☦ Do-нотация. ☦ Преобразование монадического кода из do-нотации и обратно.</p>
 </li>
 <li>
+<p>Парсер-комбинаторы и их связь с аппликативами и монадами.</p>
+<div class="paragraph">
+<p>Требуется умение писать простые парсеры прямо в REPL, например:</p>
+</div>
+<div class="olist loweralpha">
+<ol class="loweralpha" type="a">
+<li>
+<p>Парсер языка <code>aⁿbⁿcⁿ</code>&#8201;&#8212;&#8201; язык из букв <code>a,b,c</code>, где они всегда идут подряд и встречаются одинаковое количество раз.</p>
+</li>
+</ol>
+</div>
+</li>
+<li>
 <p>Преобразования кода с list comprehension в do-нотацию и обратно.</p>
 </li>
 <li>
-<p>Стандартные функции над списками. Будьте готовы написать двухстрочную функцию (map, drop, etc.) не отходя от кассы (или типа того).</p>
+<p>Стандартные функции над ленивыми списками.</p>
+<div class="paragraph">
+<p>Будьте готовы написать простую функцию и запустить прямо в REPL. Например:</p>
+</div>
+<div class="olist loweralpha">
+<ol class="loweralpha" type="a">
+<li>
+<p>Решето Эратосфена</p>
 </li>
 <li>
-<p>Free monad. Пример.</p>
+<p>Функция <code>concat :: [[a]] -&gt; [a]</code> такая, что если <code>∃ m&lt;∞ ∃n&lt;∞ ∃x: x = ((xs !! m) !! n)</code> то
+<code>∃ i&lt;∞ (Just x = elemIndex i (concat xs))</code>.</p>
+</li>
+</ol>
+</div>
+</li>
+<li>
+<p>Free monad. Пример. Сравнение монады для списка и результата специализации Free monad (вопрос из слайдов).</p>
 </li>
 <li>
 <p>Фантомные типы. Мотивация. Пример.</p>
@@ -416,10 +455,10 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 <p>GADT. Мотивация. Как получить обычный алгебраический тип из GADT, пользуясь  только одиним GADT <code>Eq a</code>?</p>
 </li>
 <li>
-<p>ФП vs. Интуиционистская логика. Как по типу получить терм его населяющий.</p>
+<p>ФП vs. Интуиционистская логика. Как по типу получить терм, его населяющий?</p>
 </li>
 <li>
-<p>Трансформеры. Мотивация и использование в домашнем задании (если есть).</p>
+<p>Трансформеры. Мотивация. Использование в домашнем задании (если есть).</p>
 </li>
 <li>
 <p>Полиморфные типы. Вывод типов в системе ML. Унификация. Типизация Y-комбинатора.</p>
@@ -431,7 +470,7 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-01-17 01:43:43 +0300
+Last updated 2020-01-20 02:29:05 +0300
 </div>
 </div>
 </body>
