--- a/fp2019/index.html
+++ b/fp2019/index.html
@@ -168,10 +168,10 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 <div class="ulist">
 <ul>
 <li>
-<p>Cдать <a href="https://stepik.org/join-class/3a7513c770b80866b96e18baa03c3ce18e87303e">1ю часть курса</a> про ФП на степике</p>
+<p>Cдать <a href="https://stepik.org/join-class/3a7513c770b80866b96e18baa03c3ce18e87303e">1ю часть курса</a> про ФП на степике (с отличием)</p>
 </li>
 <li>
-<p>Cдать <a href="https://stepik.org/join-class/a4741bd985027507643baf2b07221c264329b484">2ю часть курса</a> про ФП на степике</p>
+<p>Cдать <a href="https://stepik.org/join-class/a4741bd985027507643baf2b07221c264329b484">2ю часть курса</a> про ФП на степике (просто сдать)</p>
 </li>
 </ul>
 </div>
@@ -340,21 +340,15 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 </div>
 </div>
 <div class="sect1">
-<h2 id="week16">Неделя 16 (19 декабря)</h2>
-<div class="sectionbody">
-
-</div>
-</div>
-<div class="sect1">
-<h2 id="questions">Теоретические вопросы к экзамену 2019 года (WIP)</h2>
+<h2 id="questions">Теоретические вопросы к экзамену в январе 2020 года</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>За мямленье в ответ на вопрос с ☦ будет больно.</p>
+<p>За мямленье в ответ на вопрос с ☦ будет особенно больно.</p>
 </div>
 <div class="olist arabic">
 <ol class="arabic">
 <li>
-<p>Алгебраические типы и сопоставление с образцом. Что как называется, что писать можно, а что нельзя.</p>
+<p>☦ Алгебраические типы и сопоставление с образцом. Что как называется, что писать можно, а что нельзя.</p>
 </li>
 <li>
 <p>Классы типов. Мотивация.</p>
@@ -363,16 +357,16 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 <p>☦ Алгебра типов. Простейшие типы из которых можно много чего построить. Операции над типами. Получение зипперов по типу (конкретные типы есть в слайдах).</p>
 </li>
 <li>
-<p>Эквивалентность, равенство и изоморфизм. И для типов тоже. Как из простейших типов построить что-то изоморфное данному алгебраическому типу?</p>
+<p>☦ Эквивалентность, равенство и изоморфизм. И для типов тоже. Как из простейших типов построить что-то изоморфное данному алгебраическому типу?</p>
 </li>
 <li>
-<p>Типы данных. Левоориентированные кучи.  Основные свойства инварианты. Сложность операций. Реализация.</p>
+<p>Типы данных. Левоориентированные кучи. Основные свойства/инварианты. Сложность операций. Реализация.</p>
 </li>
 <li>
 <p>Типы данных. Биномиальные кучи. Внутреннее устройство. Сравнение c левоориентированными.</p>
 </li>
 <li>
-<p>Типы данных. Красно-черные деревья. Балансировка для чисто функциональный реализации. (Удаление не надо)</p>
+<p>Типы данных. ☦ Красно-черные деревья. Балансировка для чисто функциональный реализации. (Удаление не надо)</p>
 </li>
 <li>
 <p>☦ Лямбда-исчисление. Подстановки. Редукция. ☦ Capture avoiding substitution.</p>
@@ -381,17 +375,17 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 </div>
 </li>
 <li>
-<p>Стратегии вычисления лямбда-термов: applicative order, call-by-name, call-by-value, normal order.
+<p>Стратегии вычисления лямбда-термов: applicative order, ☦ call-by-name, ☦ call-by-value, normal order.
 Когда одно лучше/хуже другого?</p>
 </li>
 <li>
 <p>Безымянные представления: индексы де Брёйна и SKI. Редукция в SKI</p>
 </li>
 <li>
-<p>Лямбда исчисление как Тьюринг полный язык программирования. Числа и арифметика. Рекурсия.</p>
+<p>☦ Лямбда исчисление как Тьюринг полный язык программирования. Числа и арифметика. ☦ Рекурсия.</p>
 </li>
 <li>
-<p>☦ Функторы. ☦ Законы функторов. Примеры стандартных функторов из Haskell и примеры из домашнего задания.</p>
+<p>☦ Функторы. Законы функторов. Примеры стандартных функторов из Haskell и примеры из домашнего задания.</p>
 </li>
 <li>
 <p>☦ Аппликативные функторы. Законы аппликативов. Примеры из Haskell и домашнего задания.</p>
@@ -399,21 +393,24 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 <li>
 <p>☦ Монады. ☦ Законы монад. ☦ Выражение функторов и аппликативов, если монада уже описана.
 ☦ Стандартные монады: Reader, Writer, ☦ State, ☦ List, ☦ Maybe.</p>
-</li>
-<li>
-<p>Понятие чистой функции. Чистые и нечистые функции в Haskell. Монада IO.</p>
-</li>
-<li>
-<p>Continuation monad и  continuation passing style. Пример про <code>callCC</code>.</p>
 <div class="paragraph">
-<p>Также требует от студенто показать умение переписывать код из домашки в continuation passing style.</p>
+<p>Где в домашнем задании их уместно применить?</p>
 </div>
 </li>
 <li>
-<p>☦ Do-нотация. ☦ Преобразование монадического кода из do-нотации и обратно.</p>
+<p>☦ Понятие чистой функции. Чистые и нечистые функции в Haskell. Монада IO.</p>
 </li>
 <li>
-<p>Парсер-комбинаторы и их связь с аппликативами и монадами.</p>
+<p>Continuation monad и continuation passing style. Пример про <code>callCC</code>.</p>
+<div class="paragraph">
+<p>Также требует от студента показать умение переписывать код из домашки в continuation passing style.</p>
+</div>
+</li>
+<li>
+<p>☦ Do-нотация. Преобразование монадического кода из do-нотации и обратно.</p>
+</li>
+<li>
+<p>☦ Парсер-комбинаторы и их связь с аппликативами и монадами.</p>
 <div class="paragraph">
 <p>Требуется умение писать простые парсеры прямо в REPL, например:</p>
 </div>
@@ -429,7 +426,7 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 <p>Преобразования кода с list comprehension в do-нотацию и обратно.</p>
 </li>
 <li>
-<p>Стандартные функции над ленивыми списками.</p>
+<p>☦ Стандартные функции над ленивыми списками.</p>
 <div class="paragraph">
 <p>Будьте готовы написать простую функцию и запустить прямо в REPL. Например:</p>
 </div>
@@ -461,16 +458,47 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 <p>Трансформеры. Мотивация. Использование в домашнем задании (если есть).</p>
 </li>
 <li>
-<p>Полиморфные типы. Вывод типов в системе ML. Унификация. Типизация Y-комбинатора.</p>
+<p>Полиморфные типы. Вывод типов в системе типов Hindley-Milner&#8217;a. Унификация. Типизация Y-комбинатора.</p>
+<div class="paragraph">
+<p>Следует ожидать допы про вывод типов для конкретных лямбда-выражений.</p>
+</div>
 </li>
 </ol>
+</div>
+<div class="paragraph">
+<p>Следует также ожидать ожидать вопросы на адекватность/неадекватность:</p>
+</div>
+<div class="olist arabic">
+<ol class="arabic">
+<li>
+<p>Какой предмет сдаете? Как зовут лектора?</p>
+</li>
+<li>
+<p>Какую домашку делали и что было самое сложное?</p>
+</li>
+<li>
+<p>Как читается вон то страшное слово из 3го с конца билета?</p>
+</li>
+<li>
+<p>Как звали американского математика Карри?</p>
+</li>
+<li>
+<p>Как в этом коде стоят скобочки?</p>
+</li>
+<li>
+<p>и т.п.</p>
+</li>
+</ol>
+</div>
+<div class="paragraph">
+<p>P.S. Не забудьте про степик.</p>
 </div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-01-21 20:00:53 MSK
+Last updated 2020-01-24 17:42:58 MSK
 </div>
 </div>
 </body>
