WIP on questions

--- a/fp2019/index.html
+++ b/fp2019/index.html
@@ -486,6 +486,9 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 <p>Как в этом коде стоят скобочки?</p>
 </li>
 <li>
+<p>А что это за код написан в домашке и Вы ли её делали?</p>
+</li>
+<li>
 <p>и т.п.</p>
 </li>
 </ol>
@@ -498,7 +501,7 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-01-24 17:42:58 MSK
+Last updated 2020-01-24 17:44:04 MSK
 </div>
 </div>
 </body>
