Update hw description about assembler

--- a/fp2019/hw.html
+++ b/fp2019/hw.html
@@ -494,9 +494,14 @@ Scott (или кто там ещё) encoding, чтобы эмулировать 
 <h3 id="asm">Assembler (Суханова)</h3>
 <div class="paragraph">
 <p>Выберите вид ассемблера, который хорошо работает на вашем компьютере/процессоре и почитайте
-виды регистров в данной архитектуре. Реализуйте интерпретатор. Преобразование программ из
-задания 4 будет про автоматическую векторизацию. Если по дороге окажется, что
-Вы научились генерировать настоящий ELF файл, который потом можно отдельно исполнить&#8201;&#8212;&#8201;вообще будет круто.</p>
+виды регистров в данной архитектуре. Реализуйте интерпретатор.</p>
+</div>
+<div class="paragraph">
+<p>Преобразование программ из задания 4 про автоматическую векторизацию.
+В архитектуре X86 есть векторные инструкции. Предлагается принять программу на
+ассемблере и на выходе выплюнуть измененную программу на ассемблере, которая использует векторные инструкции и за счет этого выполняется быстрее (меньше сложений, умножения и прочих операций). При интерпретации просчитайте сколько инструкций пришлось выполнить в первом случае, а сколько во втором (за одно узнаете больше о монадах).
+В качестве примера векторных инструкций выберите парочку <a href="https://gist.github.com/detomon/fb9db687b154d67dbb50">отсюда</a> или <a href="https://software.intel.com/sites/landingpage/IntrinsicsGuide/#text=_mm_shuffle&amp;expand=5143">отсюда</a>, например про перестановку чисел в регистре (shuffle).
+Можно доделать дополнительные регистры как в X86, а можно сделать всё поверх регистров общего назначения (AH,AX,EAX)&#8201;&#8212;&#8201;это не принципиально.</p>
 </div>
 </div>
 <div class="sect2">
@@ -747,7 +752,7 @@ MOV  EAX ← [y]       |         MOV  EBX ← [x]</pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-12-05 17:07:05 MSK
+Last updated 2020-01-24 19:47:31 MSK
 </div>
 </div>
 </body>
