--- a/fp2019/index.html
+++ b/fp2019/index.html
@@ -474,6 +474,9 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 <p>Какой предмет сдаете? Как зовут лектора?</p>
 </li>
 <li>
+<p>Что такое функциональное программирование?</p>
+</li>
+<li>
 <p>Какую домашку делали и что было самое сложное?</p>
 </li>
 <li>
@@ -501,7 +504,7 @@ Version 0.4.0.1, Git revision 7e0b19721872d1c8e44f49484ac75f6c61412349 (2220 com
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-01-24 17:44:04 MSK
+Last updated 2020-01-30 16:29:34 MSK
 </div>
 </div>
 </body>
