--- a/fp2019/hw.html
+++ b/fp2019/hw.html
@@ -349,6 +349,9 @@ echo $BASH_COMMAND</pre>
 <p>Особенности JS: <a href="https://github.com/mozilla-spidermonkey/jsparagus/blob/master/js-quirks.md#readme">от Mozilla</a>.</p>
 </div>
 <div class="paragraph">
+<p>Про равенство в JS: <a href="https://dorey.github.io/JavaScript-Equality-Table/" class="bare">https://dorey.github.io/JavaScript-Equality-Table/</a></p>
+</div>
+<div class="paragraph">
 <p>Задача 4 типичная (смотреть выше).</p>
 </div>
 </div>
@@ -765,7 +768,7 @@ MOV  EAX ← [y]       |         MOV  EBX ← [x]</pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-05-15 15:29:17 +0300
+Last updated 2020-07-06 15:47:44 +0300
 </div>
 </div>
 </body>
