--- a/crazy.html
+++ b/crazy.html
@@ -449,6 +449,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <ul class="sectlevel1">
 <li><a href="#actors">Actor model for OCaml</a></li>
 <li><a href="#qml-rescript">Допилить QtQml, заменив Js на OCaml</a></li>
+<li><a href="#_функторы_ужас_ужас">Функторы ужас-ужас</a></li>
 </ul>
 </div>
 </div>
@@ -469,10 +470,18 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+<div class="sect1">
+<h2 id="_функторы_ужас_ужас">Функторы ужас-ужас</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Народ говорит раз и два, что функторы не очень. Надо придумать/найти какой-то супер подход, который решит проблемы.</p>
+</div>
+</div>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-09-09 23:21:53 +0300
+Last updated 2020-09-10 00:17:47 +0300
 </div>
 </div>
 </body>
