WIP on project topics

--- a/crazy.html
+++ b/crazy.html
@@ -449,6 +449,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <ul class="sectlevel1">
 <li><a href="#actors">Actor model for OCaml</a></li>
 <li><a href="#qml-rescript">Допилить QtQml, заменив Js на OCaml</a></li>
+<li><a href="#oneml">Доделать реализацию 1ML, чтобы она по фичам начала догонять OCaml</a></li>
 <li><a href="#_функторы_ужас_ужас">Функторы ужас-ужас</a></li>
 </ul>
 </div>
@@ -466,7 +467,25 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <h2 id="qml-rescript">Допилить QtQml, заменив Js на OCaml</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Больше статической типизации худа не сделают. Хотя надо подождат и посмотреть, что за статически типизированный QML планируют релизнуть в Qt 6</p>
+<p>Больше статической типизации худа не сделают. Хотя надо подождать и посмотреть, что за статически типизированный QML планируют релизнуть в Qt 6</p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="oneml">Доделать реализацию 1ML, чтобы она по фичам начала догонять OCaml</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Говорят, что там сделали нормальную реализацию модулей. Надо посмотреть, и, если там всё действительно хорошо, то доделать</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>или кодогенерацию для интерпретатора <a href="https://people.mpi-sws.org/~rossberg/1ml/">1ML</a></p>
+</li>
+<li>
+<p>или транслятор из 1ML во внутреннее бестиповое представление OCaml</p>
+</li>
+</ul>
 </div>
 </div>
 </div>
@@ -481,7 +500,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-09-10 00:17:47 +0300
+Last updated 2020-09-28 15:34:28 +0300
 </div>
 </div>
 </body>
